# pelican-minification

./: .gitignore  .pre-commit-config.yaml  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tasks.py
.github/workflows/: main.yml  publish.yml
minification/: __init__.py
pelican/plugins/minification/: __init__.py  minification.py  test_minification.py
pelican/plugins/minification/test_data/: index.js  sample.html
